--- a/public/index.html
+++ b/public/index.html
@@ -233,6 +233,10 @@
         <div class="header">
             <h1>MongoDB Database Cloner</h1>
             <p>Clone entire MongoDB databases between different connections with real-time progress tracking</p>
+            <div style="margin-top: 15px;">
+                <a href="/" style="color: #3498db; text-decoration: none; margin-right: 20px; font-weight: 600;">Database Cloner</a>
+                <a href="/crud.html" style="color: #3498db; text-decoration: none; font-weight: 600;">CRUD Explorer</a>
+            </div>
         </div>
 
         <!-- Step 1: Connection Setup -->
